# grpc_server

./: .devcontainer.json  .env  Dockerfile  Dockerfile.hash  Dockerfile.hash_ubunta  Makefile  README.md  docker-compose.yml  go.mod  go.sum
controller/: .dockerignore  .env  .golangci.yml  BUILD  Dockerfile.controller  Dockerfile.worker  MODULE.bazel  build.md  docker-compose.yml  go.mod  go.sum
controller/cmd/example/: main.go
controller/cmd/grpc_server/: BUILD  main.go
controller/cmd/manager/: BUILD  main.go  test.go
controller/cmd/worker/: BUILD  main.go
controller/internal/config/: BUILD  config.go
controller/internal/conn/: BUILD  unix.go
controller/internal/grpcserver/: BUILD  integration_test.go  server.go  server_integration_test.go  server_test.go  server_unit_test.go  unit_test.go
controller/internal/manager/: BUILD  manager.go  manager_test.go
controller/internal/worker/: BUILD  worker.go
controller/pkg/binary/: BUILD  binary.go
controller/pkg/converter/: BUILD  converter.go
controller/pkg/proto/communication/: BUILD  communication.pb.go  communication.proto
controller/pkg/proto/file_service/: BUILD  file_service.pb.go  file_service.proto  file_service_grpc.pb.go
controller/pkg/proto/worker/: worker.pb.go  worker.proto  worker_grpc.pb.go
hash/: .env  BUILD  Dockerfile.hash  MODULE.bazel  docker-compose.yml  file.cpp  file.hpp  main.cpp  md_calculator.cpp  md_calculator.hpp
scripts/: build.sh  check_style_cpp.sh  get-prometheus-cpp.sh  get_prometheus_cpp.sh  grpcserver_integration_test.sh  manager_integration_test.sh  start.sh
(+58 files in other folders)
