module(
    name = "grpc_server",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "25.5") 
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "platforms", version = "0.0.10")

go = use_extension("@rules_go//go:extensions.bzl", "go")
go.register_toolchains(version = "1.22.4", goos = "linux", goarch = ["amd64", "riscv64"])

gazelle = use_extension("@gazelle//:extensions.bzl", "gazelle")
gazelle.go_repository_default_config(
    name = "gazelle_config",
    go_mod = "//:go.mod",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_joho_godotenv",
    "com_github_stretchr_testify",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_text",
)